Mise en place d'options sur le Garbage Collector pour éviter l'erreur "java.lang.OutOfMemoryError: GC overhead limit exceeded"
svn path=/java/trunk/; revision=3673